Solved alignment with selects in popup

--- a/CRUDCodeFirst/wwwroot/css/site.css
+++ b/CRUDCodeFirst/wwwroot/css/site.css
@@ -61,4 +61,15 @@ a, .btn-link {
 
     .blazor-error-boundary::after {
         content: "An error has occurred."
-    }
+}
+
+/* My CSS */
+.mySelect{
+    width:45%!important;
+}
+
+.mySelects {
+    display:flex;
+    justify-content: space-between;
+
+}
